# apiapp

./: .env.example  .gitignore  Cargo.toml  README.md  app.js  app.py  build_exe.bat  desktop_app.py  desktop_app_relaxed.py  index.html  run.bat  run.sh  styles.css
.github/workflows/: build-windows-exe.yml  rust.yml
src/: config.rs  guard.rs  main.rs  provider.rs  tools.rs
